# flux

./: .gitignore  BUILD_COMPLETE.txt  BUILD_SUMMARY.md  BUILD_VERIFICATION.md  COMPLETION_CHECKLIST.md  COMPLETION_SUMMARY.md  EXECUTION_GUIDE.sh  FINAL_SUMMARY.txt  HOW_IT_WORKS.md  INDEX.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  ai.json  example_data.json  flux_cli.py  flux_shell.sh  index.html  mammals.json  noux_cli.py  push.sh  pyproject.toml  requirements.txt  terms.txt  test.sh  validate_build.py
animal1010101/: README.md  algorithm.py  animal_presets.json  auto_expand.py  cli.py  dictionary_lookup.py  disambig_data.json  disambig_weights.json  engine.py  eval.py  eval_questions.json  expand_eval.py  grammar.py  internet_lookup.py  lexicon.json  lexicon_auto.json  lexicon_store.py  model_weights.json  reasoning.py  schema_data.json  schema_engine.py  seed_words.json  simple_qa.py  taxonomy.json  tone.py  tone_data.json  train_animals.py  train_data.json  train_disambig.py  train_presets.py  train_weights.py  weights.py  wikidata_lookup.py  wordnet_resolver.py
animal1010101_web/: README.md  index.html  styles.css
data/: flux_training_data.json
docs/: README.md  app.js  index.html  serve.sh  styles.css  test_web.sh
evolver/: config.py  evaluator.py  knowledge.py  main.py  memory.py  mutator.py  research.py  runner.py  sandbox.py  turing.py
examples/: market_share_linear.json  sample_numbers.json  sample_strings.json  sample_training.json  solar_system_planet_map.json  solar_system_planets.json  voyager_slingshot.json
flux_app/: __init__.py  cli.py  (+14 more)
(+67 files in other folders)
