[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flux"
version = "0.1.0"
description = "Evolutionary ecosystem simulation with autonomous agents, neural plasticity, and metacognition"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools]
packages = [
    "flux_evolver",
]

[tool.setuptools.package-dir]
"" = "src"
